--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 section{
 
-    background-color: brown;
+    background-color: rgb(42, 165, 89);
     padding-top: 80px;
     padding-bottom: 80px;
     display: flex;
