--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ section{
     justify-content: center; /*alinha a secção no centro*/
 }
 
-chamada-texto{
-background-color: rgb(102, 17, 43);   
+.chamada-texto{
+margin-right: 500px;   
 }
