--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ section{
     justify-content: center; /*alinha a secção no centro*/
 }
 
-.chamada-texto{
+.chamada-text{
 margin-right: 15%;   
 }
