--- a/style.css
+++ b/style.css
@@ -12,6 +12,6 @@ section{
     justify-content: center; /*alinha a secção no centro*/
 }
 
-.chamada-text{
+.chamada-texto{
 margin-right: 5%;   
 }
